--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,30 +2,32 @@
   <div class="row">
     <% @products.each do |product| %>
       <div class="col-sm-4">
-        <article class="col-item">
-          <div class="photo">
-            <div class="options-cart-round">
-              <button class="btn btn-danger">
-                <span class="fa fa-shopping-cart"></span>
-              </button>
+        <%= form_for @order_detail do |f| %>
+          <article class="col-item">
+            <div class="photo">
+              <div class="options-cart-round">
+                <%= f.hidden_field :unit_quantity, value: Settings.one %>
+                <%= f.hidden_field :product_id, value: product.id %>
+                <%= f.submit t(".add"), class: "btn btn-danger" %>
+              </div>
+              <%= link_to product_path(product) do %>
+                <%= default_image product %>
+              <% end %>
             </div>
-            <%= link_to product_path(product) do %>
-              <%= default_image product %>
-            <% end %>
-          </div>
-          <div class="info">
-            <div class="row">
-              <div class="price-details col-md-6">
-                <h1><%= link_to product.name, product_path(product) %></h1>
-                <p class="price-new">
-                  <span>
-                    <%= number_to_currency product.price %>
-                  </span>
-                </p>
+            <div class="info">
+              <div class="row">
+                <div class="price-details col-md-6">
+                  <h1><%= link_to product.name, product_path(product) %></h1>
+                  <p class="price-new">
+                    <span>
+                      <%= number_to_currency product.price %>
+                    </span>
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
-        </article>
+          </article>
+        <% end %>
       </div>
     <% end %>
   </div>
