--- a/app/views/staffs/pages/home.html.erb
+++ b/app/views/staffs/pages/home.html.erb
@@ -1,6 +1,4 @@
 <% provide :title, t(".staff_home") %>
-<div class="center jumbotron">
-  <h1><%= t "welcome" %></h1>
-  <h1><%= t "title_page" %></h1>
-  <%= t ".staff_des" %>
-</div>
+<body class="staff">
+
+</body>
